samples/_failures_safe/1761176602_c831d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e1a6e3f.c: In function ‘read_operator’:
./samples/SAFE/__tmp_3e1a6e3f.c:176:5: error: expected expression at end of input
  176 |     token.value[
      |     ^~~~~
./samples/SAFE/__tmp_3e1a6e3f.c:176:5: error: expected declaration or statement at end of input
